force-app/main/default/objects/Charket__WeChatTranscriptItem__c/Charket__WeChatTranscriptItem__c.object-meta.xml
<CustomObject>
    <label>WeChat Transcript Item</label>
    <nameField>
        <displayFormat>WTI-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Transcript Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>