force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__Content__c.field-meta.xml
<CustomField>
    <fullName>Charket__Content__c</fullName>
    <label>Content</label>
    <length>16384</length>
    <type>Html</type>
</CustomField>