force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__IsKeyword__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsKeyword__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keyword</label>
    <type>Checkbox</type>
</CustomField>