force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__MediaId__c.field-meta.xml
<CustomField>
    <fullName>Charket__MediaId__c</fullName>
    <label>Media ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>