force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__MediaUrl__c.field-meta.xml
<CustomField>
    <fullName>Charket__MediaUrl__c</fullName>
    <label>Media URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>