force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__ReadTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__ReadTime__c</fullName>
    <label>Read Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>