force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__Recongnition__c.field-meta.xml
<CustomField>
    <fullName>Charket__Recongnition__c</fullName>
    <label>Recongnition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>