force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>Charket__ResponseBody__c</fullName>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>