force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__SenderName__c.field-meta.xml
<CustomField>
    <fullName>Charket__SenderName__c</fullName>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>