force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__ThumbMediaUrl__c.field-meta.xml
<CustomField>
    <fullName>Charket__ThumbMediaUrl__c</fullName>
    <label>ThumbMedia URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>