force-app/main/default/objects/Charket__WeChatTranscriptItem__c/fields/Charket__WeChatCreatedTime__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatCreatedTime__c</fullName>
    <description>Created Time from WeChat platform</description>
    <label>WeChat Created Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>